--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,11 +7,10 @@
 
     <EditText
         android:id="@+id/editTextID"
-        android:layout_width="280dp"
+        android:layout_width="230dp"
         android:layout_height="50dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="65dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="70dp"
         android:layout_marginBottom="5dp"
         android:ems="10"
         android:hint="@string/signup_id"
@@ -19,8 +18,7 @@
         android:minHeight="48dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/editTextPW"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintEnd_toStartOf="@+id/idBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -28,9 +26,9 @@
         android:id="@+id/editTextName"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginBottom="5dp"
         android:ems="10"
         android:hint="@string/signup_name"
@@ -39,7 +37,7 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/editTextTel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPW" />
 
@@ -47,9 +45,9 @@
         android:id="@+id/editTextTel"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginBottom="20dp"
         android:ems="10"
         android:hint="@string/signup_tel"
@@ -66,9 +64,9 @@
         android:id="@+id/editTextPW"
         android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginBottom="5dp"
         android:ems="10"
         android:hint="@string/signup_pw"
@@ -77,18 +75,17 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/editTextName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextID" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_width="258dp"
+        android:layout_height="188dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="21dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="21dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,9 +97,9 @@
         android:layout_width="130dp"
         android:layout_height="48dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="70dp"
         android:contentDescription="@string/check_signup"
         android:padding="0sp"
         android:scaleType="centerCrop"
@@ -117,9 +114,9 @@
         android:layout_width="130dp"
         android:layout_height="48dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="60dp"
         android:contentDescription="@string/cancel_signup"
         android:padding="0sp"
         android:scaleType="centerCrop"
@@ -127,7 +124,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/checkBtn"
         app:layout_constraintTop_toBottomOf="@+id/editTextTel"
-        app:layout_constraintVertical_bias="0.916"
+        app:layout_constraintVertical_bias="0.693"
         app:srcCompat="@drawable/cancel" />
 
     <ImageButton
@@ -142,5 +139,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back" />
+
+    <ImageButton
+        android:id="@+id/idBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="5dp"
+        android:contentDescription="@string/check_id"
+        android:padding="0sp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@+id/editTextPW"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTextID"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.424"
+        app:srcCompat="@drawable/chck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
